@@ -1,9 +1,3 @@
--flash format <object type="application/x-shockwave-flash" data="foo.swf" />
-
--polish stats font (LP bug)
-
--compact error onder windows (LP bug)
-
 -time making backup of file before sync, both in and out of Python
 
 -popup explaining use of 'compact'
@@ -17,21 +11,24 @@
 
 -rename card set dialog: prefill with existing name
 
--keeping key pressed on show answer also grades card?
-
--change language from japanese: need to translate windows title again
-
--# in media filenames
-
--close bug reports / uservoice
-
--don't reset non memorised count when editing cards
-
 -extra space below media player on production cards in Sentence type
 
 -merging cards: should give an option to go back and edit?
 
 -when merging duplicate cards, merge tags also (Stephan Maseizik)
+
+
+
+-close bug reports / uservoice
+
+
+-# in media filenames
+
+-don't reset non memorised count when editing cards
+
+-keeping key pressed on show answer also grades card?
+
+-change language from japanese: need to translate windows title agains
 
 -sync problem: tag b exists, card with tag a rename tag to a.b, edit card?, then
 rename tag to a, b. Cannot reproduce, see ~/tmp/default-20120723-xxx-conflict for client)
@@ -44,6 +41,8 @@ erver.py", line 481, in get_server_log_entries
  GeneratorExit
 haal data van een paar dagen terug
 client: sqlite_sync: 399 card from log entry: none has no attribute __get__item
+
+-catch File "mnemosyne\libmnemosyne\configuration.pyo", line 183, in load EOFError"?
 
 -add tag to only one sister card, then to next sister card:
   client: ~/tmp/default-20120817-161449.db
